# Debating-AI

./: .env.example  README.md  app.py  bot_instructions.py  pyproject.toml
components/: bots.py  tools.py
config/: index.py
graph/: index.ipynb
